Finish Edit Seeker

--- a/src/app/features/profiles/seeker/edit-seeker-profile/edit-seeker-profile.html
+++ b/src/app/features/profiles/seeker/edit-seeker-profile/edit-seeker-profile.html
@@ -28,6 +28,15 @@
                         </mat-error>
                     </mat-form-field>
 
+                    <!-- Phone Number -->
+                    <mat-form-field appearance="outline">
+                        <mat-label>Phone Number</mat-label>
+                        <input matInput formControlName="phoneNumber" placeholder="e.g. +1234567890" />
+                        <mat-error *ngIf="profileForm.get('phoneNumber')?.hasError('pattern')">
+                            Please enter a valid phone number
+                        </mat-error>
+                    </mat-form-field>
+
                     <!-- Date of Birth -->
                     <mat-form-field appearance="outline">
                         <mat-label>Date of Birth</mat-label>
@@ -45,22 +54,22 @@
                     </mat-form-field>
 
                     <!-- Email -->
-                    <mat-form-field appearance="outline">
+                    <!-- <mat-form-field appearance="outline">
                         <mat-label>Email</mat-label>
                         <input matInput formControlName="email" placeholder="Email Address" />
                         <mat-error *ngIf="profileForm.get('email')?.hasError('email')">
                             Please enter a valid email
                         </mat-error>
-                    </mat-form-field>
+                    </mat-form-field> -->
 
                     <!-- Profile Image URL -->
-                    <mat-form-field appearance="outline">
+                    <!-- <mat-form-field appearance="outline">
                         <mat-label>Profile Image URL</mat-label>
                         <input matInput formControlName="profileImageURL" placeholder="Profile Image URL" />
                         <mat-error *ngIf="profileForm.get('profileImageURL')?.hasError('pattern')">
                             Please enter a valid URL (http:// or https://)
                         </mat-error>
-                    </mat-form-field>
+                    </mat-form-field> -->
                 </div>
 
                 <!-- Address -->
@@ -73,13 +82,13 @@
                 </mat-form-field>
 
                 <!-- CV Upload -->
-                <div class="w-full mb-4">
+                <!-- <div class="w-full mb-4">
                     <label for="cvFile">Upload CV</label>
                     <input type="file" class="form-control my-2" id="cvFile" (change)="onFileSelected($event)" accept=".pdf,.doc,.docx" />
                     <p *ngIf="profileForm.get('cvURL')?.value">
                         Current CV: <a [href]="profileForm.get('cvURL')?.value" target="_blank">Download</a>
                     </p>
-                </div>
+                </div> -->
 
 
                 <!-- Summary -->
