--- a/src/app/features/Home/home/home.html
+++ b/src/app/features/Home/home/home.html
@@ -186,6 +186,7 @@
             <div class="row">
                   @for(job of jobsList(); track job.id){
                     <app-job-view [job]="job" class="col-lg-4 col-md-6 col-sm-10 my-4"></app-job-view>
+                    <!-- <app-job-view [job]="job" class="col-lg-9 col-md-6 col-sm-10 my-4"></app-job-view> -->
                 }
             </div>
            
