--- a/src/app/features/Jobs/job-view/job-view.html
+++ b/src/app/features/Jobs/job-view/job-view.html
@@ -46,7 +46,7 @@
         @for(skill of job.skills; track $index){
             <div class="skill">{{skill}}</div>
         }  
-        <div class="more">+1 more</div>
+        <!-- <div class="more">+1 more</div> -->
     </div>
 
     <hr>
@@ -61,4 +61,11 @@
             <input type="button" class="apply-now-btn " routerLink="/jobApp" value="Apply Now">
         </div>
     </div>
-</div>
+</div> 
+
+
+
+
+
+
+
