--- a/src/app/features/Explore/explore.html
+++ b/src/app/features/Explore/explore.html
@@ -242,7 +242,7 @@
             @if (!isLoading() && !error() && jobsList().length > 0) {
                 <div class="row">
                     @for(job of jobsList(); track job.id){
-                        <app-job-view [job]="job" class="col-lg-6 col-md-6 col-sm-10 my-4 mx-auto"></app-job-view>
+                        <app-job-explore-view [job]="job" class="col-12 my-4"></app-job-explore-view> 
                     }
                 </div>
             }
