Working on Applications

--- a/src/app/features/Application/seeker-application/steps/documents/documents.html
+++ b/src/app/features/Application/seeker-application/steps/documents/documents.html
@@ -9,7 +9,9 @@
     <textarea class="form-control" rows="4"></textarea>
   </div>
 
-  <div class="d-flex justify-content-between">
+  <hr class="mt-4">
+
+  <div class="d-flex justify-content-between mt-4">
     <button routerLink="/seekerApp/personal-info" class="btn btn-secondary">Previous</button>
     <button routerLink="/seekerApp/questions" class="btn btn-primary">Next</button>
   </div>
