--- a/src/app/features/Application/seeker-application/steps/review/review.html
+++ b/src/app/features/Application/seeker-application/steps/review/review.html
@@ -1,4 +1,4 @@
-<h3>Review & Submit</h3>
+<h3>Review</h3>
 <div class="card p-3 mb-3">
   <h5>Personal Info</h5>
   <p><strong>Name:</strong> John Doe</p>
@@ -18,7 +18,3 @@
   <p>Experience: 5 years</p>
 </div>
 
-<div class="d-flex justify-content-between">
-  <button routerLink="/seekerApp/questions" class="btn btn-secondary">Previous</button>
-  <button class="btn btn-success">Submit Application</button>
-</div>
