--- a/src/app/features/Application/seeker-application/layout/layout.css
+++ b/src/app/features/Application/seeker-application/layout/layout.css
@@ -4,11 +4,13 @@ header{
 
 .main-container{
     background: var(--basic-gray);
+    height: 100vh;
+    padding: 20px 80px;
 }
 
 .box{
     background: white;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    /* padding: 20px; */
+    padding: 20px;
 }
