--- a/src/app/features/Jobs/job-saved-view/job-saved-view.html
+++ b/src/app/features/Jobs/job-saved-view/job-saved-view.html
@@ -59,7 +59,7 @@
                     </button>
                 </div>
                 <div class="d-flex justify-content-end flex-column">
-                    <input type="button" class="apply-now-btn my-2" routerLink="/jobApp" value="Apply Now">
+                    <input type="button" class="apply-now-btn my-2" routerLink="/seekerApp" value="Apply Now">
 
                     <button class="view-dtl-btn" [routerLink]="['/jobDtl',job.jobId]">
                         <i class="bi bi-box-arrow-up-right me-2"></i> View Details
