--- a/src/app/features/Jobs/job-view/job-view.html
+++ b/src/app/features/Jobs/job-view/job-view.html
@@ -58,7 +58,7 @@
             </button>
         </div>
         <div class="col-lg-2 col-md-12 col-sm-12">
-            <input type="button" class="apply-now-btn " routerLink="/jobApp" value="Apply Now">
+            <input type="button" class="apply-now-btn " routerLink="/seekerApp" value="Apply Now">
         </div>
     </div>
 </div> 
