--- a/src/app/shared/components/navbar/navbar.html
+++ b/src/app/shared/components/navbar/navbar.html
@@ -1,4 +1,3 @@
-
 <nav class="navbar navbar-expand-lg bg-body-tertiary ">
   <div class="container-fluid">
     <!-- Logo and Brand -->
@@ -78,14 +77,11 @@
 </nav>
 
 
-
-
-
-
-
 <main class="mt-5 pt-3">
   <router-outlet></router-outlet>
 </main>
+
+<app-chat-button></app-chat-button>
 
 <footer>
   <app-footer></app-footer>
