--- a/src/app/features/Jobs/job-explore-view/job-explore-view.html
+++ b/src/app/features/Jobs/job-explore-view/job-explore-view.html
@@ -59,7 +59,9 @@
                 </button>
             </div>
             <div class="d-flex justify-content-end flex-column">
-                <input type="button" class="apply-now-btn my-2" routerLink="/seekerApp" value="Apply Now">
+                <button class="apply-now-btn my-2" [routerLink]="['/seekerApp', job.id, 'personal-info']">
+                    Apply Now
+                </button>
 
                 <button class="view-dtl-btn" [routerLink]="['/jobDtl',job.id]">
                     <i class="bi bi-box-arrow-up-right me-2"></i> View Details
