--- a/src/app/features/Jobs/job-saved-view/job-saved-view.html
+++ b/src/app/features/Jobs/job-saved-view/job-saved-view.html
@@ -52,14 +52,16 @@
         </div>
 
         <div class="col-lg-3 col-md-12">
-            <div class="d-flex justify-content-end">
-                <div class="d-flex justify-content-end">
+            <div>
+                <div class="d-flex justify-content-end mb-5">
                     <button class="save-job-btn" (click)="AddToSaved()" [class.saved]="isSavedFlag()">
                         <i class="bi" [class.bi-bookmark-check]="isSavedFlag()" [class.bi-bookmark]="!isSavedFlag()"></i>
                     </button>
                 </div>
                 <div class="d-flex justify-content-end flex-column">
-                    <input type="button" class="apply-now-btn my-2" routerLink="/seekerApp" value="Apply Now">
+                    <button class="apply-now-btn my-2" [routerLink]="['/seekerApp', job.jobId, 'personal-info']">
+                        Apply Now
+                    </button>
 
                     <button class="view-dtl-btn" [routerLink]="['/jobDtl',job.jobId]">
                         <i class="bi bi-box-arrow-up-right me-2"></i> View Details
