--- a/src/app/features/profiles/seeker/seeker-profile/seeker-profile.html
+++ b/src/app/features/profiles/seeker/seeker-profile/seeker-profile.html
@@ -31,6 +31,7 @@
             <button mat-menu-item 
                     (click)="deleteProfileImage()" 
                     *ngIf="seekerData().profileImageUrl"
+                    [disabled]="isUploadingImage()"
                     class="delete-action">
               <mat-icon>delete</mat-icon>
               <span>Delete Image</span>
@@ -40,7 +41,7 @@
           <!-- Upload Progress Indicator for Image -->
           <div *ngIf="isUploadingImage()" class="upload-progress">
             <mat-spinner diameter="40"></mat-spinner>
-            <p>Uploading...</p>
+            <p>Processing...</p>
           </div>
         </div>
 
@@ -85,16 +86,24 @@
           <!-- Resume Management Buttons (when resume exists) -->
           <div *ngIf="seekerData().cV_Url" class="resume-actions">
             <!-- View/Download Button -->
-            <button mat-button (click)="downloadResume()" title="Download Resume">
-              <mat-icon>download</mat-icon> Download
+            <button class="openCv">
+              <div *ngIf="seekerData().cV_Url" >
+                <a [href]="seekerData().cV_Url" download="uploaded-file.pdf" style="text-decoration: none; color:#1564ca; font-weight: 600;">
+                  <span><i class="bi bi-box-arrow-in-right me-3 fs-4 mt-2"></i>Open CV</span>
+                </a>
+            </div>
             </button>
+            
             
             <!-- Delete Button -->
             <button mat-button 
                     (click)="deleteResume()" 
+                    [disabled]="isUploadingResume()"
                     color="warn" 
                     title="Delete Resume">
-              <mat-icon>delete</mat-icon> Delete
+              <mat-icon>delete</mat-icon> 
+              <span *ngIf="!isUploadingResume()">Delete</span>
+              <mat-spinner diameter="16" *ngIf="isUploadingResume()"></mat-spinner>
             </button>
           </div>
         </div>
