--- a/src/app/auth/signup/signup.css
+++ b/src/app/auth/signup/signup.css
@@ -1,48 +1,47 @@
-.full-width {
-  width: 100%;
-  margin-bottom: 16px;
-  display: block;
-}
-
-.title{
-  color: #3f51b5;
-}
-
-form {
-  max-width: 600px;
-  margin: auto;
+.container {
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
-mat-card {
-  padding: 32px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  border-radius: 12px;
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 600px;
+  margin: 0 auto;
+  padding: 2rem;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  background: #fff;
 }
 
-mat-form-field {
+.full-width {
   width: 100%;
 }
 
-mat-error small {
-  color: red;
-  font-size: 12px;
+.valid-form {
+  color: #dc3545;
+  font-size: 0.9rem;
+  background-color: #fbe5e7;
+  padding: 0.5rem;
+  border-radius: 5px;
 }
 
-button[mat-raised-button] {
-  padding: 20px 24px; 
-  font-weight: 600;
-  font-size: 16px;
-  border-radius: 8px;
-  background-color: #3f51b5;
+.reset-btn {
+  width: 100%;
+  background-color: #007bff;
   color: white;
-  transition: background-color 0.3s ease;
+  border: none;
+  padding: 12px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: 600;
 }
 
-button[mat-raised-button]:hover {
-  background-color: #303f9f;
+.reset-btn:hover {
+  background-color: #0056b3;
 }
-
-
